// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gamification golden output > GET /api/points/leaderboard (category, all_time) 1`] = `
{
  "currentUser": {
    "isCurrentUser": true,
    "name": "Sarah",
    "points": 50,
    "rank": 1,
    "userId": 2,
  },
  "entries": [
    {
      "isCurrentUser": true,
      "name": "Sarah",
      "points": 50,
      "rank": 1,
      "userId": 2,
    },
    {
      "isCurrentUser": false,
      "name": "James",
      "points": 50,
      "rank": 2,
      "userId": 3,
    },
    {
      "isCurrentUser": false,
      "name": "Maria",
      "points": 50,
      "rank": 3,
      "userId": 4,
    },
    {
      "isCurrentUser": false,
      "name": "David",
      "points": 50,
      "rank": 4,
      "userId": 5,
    },
    {
      "isCurrentUser": false,
      "name": "Emma",
      "points": 25,
      "rank": 5,
      "userId": 6,
    },
    {
      "isCurrentUser": false,
      "name": "Sophia",
      "points": 25,
      "rank": 6,
      "userId": 10,
    },
    {
      "isCurrentUser": false,
      "name": "Michael",
      "points": 10,
      "rank": 7,
      "userId": 7,
    },
    {
      "isCurrentUser": false,
      "name": "Olivia",
      "points": 10,
      "rank": 8,
      "userId": 8,
    },
    {
      "isCurrentUser": false,
      "name": "Liam",
      "points": 10,
      "rank": 9,
      "userId": 11,
    },
    {
      "isCurrentUser": false,
      "name": "Ava",
      "points": 10,
      "rank": 10,
      "userId": 12,
    },
    {
      "isCurrentUser": false,
      "name": "Noah",
      "points": 10,
      "rank": 11,
      "userId": 13,
    },
  ],
}
`;

exports[`Gamification golden output > GET /api/points/leaderboard (category, month) 1`] = `
{
  "currentUser": null,
  "entries": [],
}
`;

exports[`Gamification golden output > GET /api/points/leaderboard (global, all_time) 1`] = `
{
  "currentUser": {
    "isCurrentUser": true,
    "name": "Sarah",
    "points": 435,
    "rank": 2,
    "userId": 2,
  },
  "entries": [
    {
      "isCurrentUser": false,
      "name": "Maria",
      "points": 450,
      "rank": 1,
      "userId": 4,
    },
    {
      "isCurrentUser": true,
      "name": "Sarah",
      "points": 435,
      "rank": 2,
      "userId": 2,
    },
    {
      "isCurrentUser": false,
      "name": "James",
      "points": 435,
      "rank": 3,
      "userId": 3,
    },
    {
      "isCurrentUser": false,
      "name": "Michael",
      "points": 305,
      "rank": 4,
      "userId": 7,
    },
    {
      "isCurrentUser": false,
      "name": "Daniel",
      "points": 245,
      "rank": 5,
      "userId": 9,
    },
    {
      "isCurrentUser": false,
      "name": "David",
      "points": 195,
      "rank": 6,
      "userId": 5,
    },
    {
      "isCurrentUser": false,
      "name": "Emma",
      "points": 195,
      "rank": 7,
      "userId": 6,
    },
    {
      "isCurrentUser": false,
      "name": "Olivia",
      "points": 195,
      "rank": 8,
      "userId": 8,
    },
    {
      "isCurrentUser": false,
      "name": "Sophia",
      "points": 190,
      "rank": 9,
      "userId": 10,
    },
    {
      "isCurrentUser": false,
      "name": "Noah",
      "points": 170,
      "rank": 10,
      "userId": 13,
    },
    {
      "isCurrentUser": false,
      "name": "Ava",
      "points": 120,
      "rank": 11,
      "userId": 12,
    },
    {
      "isCurrentUser": false,
      "name": "Liam",
      "points": 100,
      "rank": 12,
      "userId": 11,
    },
  ],
}
`;

exports[`Gamification golden output > GET /api/points/leaderboard (global, month) 1`] = `
{
  "currentUser": null,
  "entries": [],
}
`;

exports[`Gamification golden output > GET /api/points/me/history (page 1) 1`] = `
{
  "items": [
    {
      "amount": 50,
      "attemptId": 1,
      "contentId": 1,
      "contentTitle": "Handling an Angry Customer",
      "createdAt": "<timestamp>",
      "description": "Reached Gold tier on "Handling an Angry Customer"",
      "id": 1,
      "tierColor": "#ca8a04",
      "tierIcon": null,
      "tierName": "Gold",
      "tierStarLevel": 3,
    },
    {
      "amount": 25,
      "attemptId": 3,
      "contentId": 2,
      "contentTitle": "Negotiating a Raise",
      "createdAt": "<timestamp>",
      "description": "Reached Silver tier on "Negotiating a Raise"",
      "id": 2,
      "tierColor": "#64748b",
      "tierIcon": null,
      "tierName": "Silver",
      "tierStarLevel": 2,
    },
    {
      "amount": 25,
      "attemptId": 4,
      "contentId": 3,
      "contentTitle": "Delivering Bad News to Your Team",
      "createdAt": "<timestamp>",
      "description": "Reached Silver tier on "Delivering Bad News to Your Team"",
      "id": 3,
      "tierColor": "#64748b",
      "tierIcon": null,
      "tierName": "Silver",
      "tierStarLevel": 2,
    },
    {
      "amount": 50,
      "attemptId": 5,
      "contentId": 4,
      "contentTitle": "Cold Call Sales Pitch",
      "createdAt": "<timestamp>",
      "description": "Reached Gold tier on "Cold Call Sales Pitch"",
      "id": 4,
      "tierColor": "#ca8a04",
      "tierIcon": null,
      "tierName": "Gold",
      "tierStarLevel": 3,
    },
    {
      "amount": 50,
      "attemptId": 6,
      "contentId": 5,
      "contentTitle": "Breaking Difficult Medical News",
      "createdAt": "<timestamp>",
      "description": "Reached Gold tier on "Breaking Difficult Medical News"",
      "id": 5,
      "tierColor": "#ca8a04",
      "tierIcon": null,
      "tierName": "Gold",
      "tierStarLevel": 3,
    },
    {
      "amount": 25,
      "attemptId": 7,
      "contentId": 6,
      "contentTitle": "Conducting a Performance Review",
      "createdAt": "<timestamp>",
      "description": "Reached Silver tier on "Conducting a Performance Review"",
      "id": 6,
      "tierColor": "#64748b",
      "tierIcon": null,
      "tierName": "Silver",
      "tierStarLevel": 2,
    },
    {
      "amount": 25,
      "attemptId": 8,
      "contentId": 7,
      "contentTitle": "Mediating a Workplace Conflict",
      "createdAt": "<timestamp>",
      "description": "Reached Silver tier on "Mediating a Workplace Conflict"",
      "id": 7,
      "tierColor": "#64748b",
      "tierIcon": null,
      "tierName": "Silver",
      "tierStarLevel": 2,
    },
    {
      "amount": 25,
      "attemptId": 9,
      "contentId": 8,
      "contentTitle": "Upselling Premium Features",
      "createdAt": "<timestamp>",
      "description": "Reached Silver tier on "Upselling Premium Features"",
      "id": 8,
      "tierColor": "#64748b",
      "tierIcon": null,
      "tierName": "Silver",
      "tierStarLevel": 2,
    },
    {
      "amount": 50,
      "attemptId": 10,
      "contentId": 9,
      "contentTitle": "Interviewing a Skeptical Candidate",
      "createdAt": "<timestamp>",
      "description": "Reached Gold tier on "Interviewing a Skeptical Candidate"",
      "id": 9,
      "tierColor": "#ca8a04",
      "tierIcon": null,
      "tierName": "Gold",
      "tierStarLevel": 3,
    },
    {
      "amount": 10,
      "attemptId": 11,
      "contentId": 10,
      "contentTitle": "Explaining a Product Delay",
      "createdAt": "<timestamp>",
      "description": "Reached Bronze tier on "Explaining a Product Delay"",
      "id": 10,
      "tierColor": "#b45309",
      "tierIcon": null,
      "tierName": "Bronze",
      "tierStarLevel": 1,
    },
    {
      "amount": 50,
      "attemptId": 12,
      "contentId": 11,
      "contentTitle": "New Hire Check-in",
      "createdAt": "<timestamp>",
      "description": "Reached Gold tier on "New Hire Check-in"",
      "id": 11,
      "tierColor": "#ca8a04",
      "tierIcon": null,
      "tierName": "Gold",
      "tierStarLevel": 3,
    },
    {
      "amount": 50,
      "attemptId": 14,
      "contentId": 12,
      "contentTitle": "Renewing an At-Risk Enterprise Contract",
      "createdAt": "<timestamp>",
      "description": "Reached Gold tier on "Renewing an At-Risk Enterprise Contract"",
      "id": 12,
      "tierColor": "#ca8a04",
      "tierIcon": null,
      "tierName": "Gold",
      "tierStarLevel": 3,
    },
  ],
  "limit": 20,
  "page": 1,
  "total": 12,
}
`;

exports[`Gamification golden output > GET /api/points/me/stats 1`] = `
{
  "categoryMastery": [
    {
      "label": "HR",
      "slug": "hr",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 2,
      },
      "total": 3,
    },
    {
      "label": "Sales",
      "slug": "sales",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 1,
      },
      "total": 2,
    },
    {
      "label": "Customer Success",
      "slug": "customer-success",
      "starCounts": {
        "bronze": 1,
        "gold": 1,
        "silver": 0,
      },
      "total": 2,
    },
    {
      "label": "Customer Service",
      "slug": "customer-service",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 0,
      },
      "total": 1,
    },
    {
      "label": "Healthcare",
      "slug": "healthcare",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 0,
      },
      "total": 1,
    },
    {
      "label": "Recruitment",
      "slug": "recruitment",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 0,
      },
      "total": 1,
    },
    {
      "label": "Leadership",
      "slug": "leadership",
      "starCounts": {
        "bronze": 0,
        "gold": 0,
        "silver": 1,
      },
      "total": 1,
    },
    {
      "label": "Management",
      "slug": "management",
      "starCounts": {
        "bronze": 0,
        "gold": 0,
        "silver": 1,
      },
      "total": 1,
    },
  ],
  "currentWeekActive": true,
  "monthPoints": 0,
  "passedCount": 11,
  "publishedCount": 12,
  "starCounts": {
    "bronze": 1,
    "gold": 6,
    "silver": 5,
  },
  "streakWeeks": 3,
  "totalPoints": 435,
}
`;

exports[`Gamification golden output > GET /api/points/recent-stars 1`] = `
{
  "items": [
    {
      "contentId": 1,
      "contentTitle": "Handling an Angry Customer",
      "createdAt": "<timestamp>",
      "id": 1,
      "isCurrentUser": true,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 2,
      "userName": "Sarah",
    },
    {
      "contentId": 11,
      "contentTitle": "New Hire Check-in",
      "createdAt": "<timestamp>",
      "id": 11,
      "isCurrentUser": true,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 2,
      "userName": "Sarah",
    },
    {
      "contentId": 11,
      "contentTitle": "New Hire Check-in",
      "createdAt": "<timestamp>",
      "id": 23,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 3,
      "userName": "James",
    },
    {
      "contentId": 1,
      "contentTitle": "Handling an Angry Customer",
      "createdAt": "<timestamp>",
      "id": 25,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 4,
      "userName": "Maria",
    },
    {
      "contentId": 5,
      "contentTitle": "Breaking Difficult Medical News",
      "createdAt": "<timestamp>",
      "id": 29,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 4,
      "userName": "Maria",
    },
    {
      "contentId": 5,
      "contentTitle": "Breaking Difficult Medical News",
      "createdAt": "<timestamp>",
      "id": 49,
      "isCurrentUser": false,
      "starLevel": 2,
      "tierColor": "#64748b",
      "tierName": "Silver",
      "userId": 6,
      "userName": "Emma",
    },
    {
      "contentId": 8,
      "contentTitle": "Upselling Premium Features",
      "createdAt": "<timestamp>",
      "id": 63,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 7,
      "userName": "Michael",
    },
    {
      "contentId": 3,
      "contentTitle": "Delivering Bad News to Your Team",
      "createdAt": "<timestamp>",
      "id": 69,
      "isCurrentUser": false,
      "starLevel": 2,
      "tierColor": "#64748b",
      "tierName": "Silver",
      "userId": 8,
      "userName": "Olivia",
    },
    {
      "contentId": 6,
      "contentTitle": "Conducting a Performance Review",
      "createdAt": "<timestamp>",
      "id": 71,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 8,
      "userName": "Olivia",
    },
    {
      "contentId": 10,
      "contentTitle": "Explaining a Product Delay",
      "createdAt": "<timestamp>",
      "id": 74,
      "isCurrentUser": false,
      "starLevel": 2,
      "tierColor": "#64748b",
      "tierName": "Silver",
      "userId": 8,
      "userName": "Olivia",
    },
    {
      "contentId": 2,
      "contentTitle": "Negotiating a Raise",
      "createdAt": "<timestamp>",
      "id": 75,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 9,
      "userName": "Daniel",
    },
    {
      "contentId": 8,
      "contentTitle": "Upselling Premium Features",
      "createdAt": "<timestamp>",
      "id": 82,
      "isCurrentUser": false,
      "starLevel": 3,
      "tierColor": "#ca8a04",
      "tierName": "Gold",
      "userId": 9,
      "userName": "Daniel",
    },
    {
      "contentId": 8,
      "contentTitle": "Upselling Premium Features",
      "createdAt": "<timestamp>",
      "id": 103,
      "isCurrentUser": false,
      "starLevel": 1,
      "tierColor": "#b45309",
      "tierName": "Bronze",
      "userId": 11,
      "userName": "Liam",
    },
    {
      "contentId": 5,
      "contentTitle": "Breaking Difficult Medical News",
      "createdAt": "<timestamp>",
      "id": 110,
      "isCurrentUser": false,
      "starLevel": 1,
      "tierColor": "#b45309",
      "tierName": "Bronze",
      "userId": 12,
      "userName": "Ava",
    },
    {
      "contentId": 5,
      "contentTitle": "Breaking Difficult Medical News",
      "createdAt": "<timestamp>",
      "id": 120,
      "isCurrentUser": false,
      "starLevel": 1,
      "tierColor": "#b45309",
      "tierName": "Bronze",
      "userId": 13,
      "userName": "Noah",
    },
  ],
}
`;

exports[`Gamification golden output > GET /api/teams/all/members/:userId/roleplays/:roleplayId/attempts 1`] = `
{
  "attempts": [
    {
      "attemptNumber": 2,
      "completedAt": "<timestamp>",
      "id": 2,
      "isPassed": true,
      "score": 93,
      "starLevel": 0,
      "status": "completed",
      "tierName": null,
    },
    {
      "attemptNumber": 1,
      "completedAt": "<timestamp>",
      "id": 1,
      "isPassed": true,
      "score": 93,
      "starLevel": 3,
      "status": "completed",
      "tierName": "Gold",
    },
  ],
}
`;

exports[`Gamification golden output > GET /api/teams/all/members/:userId/scenario-history 1`] = `
{
  "avatarInitials": "SA",
  "categories": [
    {
      "label": "Customer Service",
      "scenarios": [
        {
          "attemptCount": 2,
          "bestScore": 93,
          "contentId": 1,
          "coverImageMediaId": 1,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 3,
          "title": "Handling an Angry Customer",
        },
      ],
      "slug": "customer-service",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 0,
      },
      "total": 1,
    },
    {
      "label": "Leadership",
      "scenarios": [
        {
          "attemptCount": 1,
          "bestScore": 78,
          "contentId": 2,
          "coverImageMediaId": 2,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 2,
          "title": "Negotiating a Raise",
        },
      ],
      "slug": "leadership",
      "starCounts": {
        "bronze": 0,
        "gold": 0,
        "silver": 1,
      },
      "total": 1,
    },
    {
      "label": "Management",
      "scenarios": [
        {
          "attemptCount": 1,
          "bestScore": 78,
          "contentId": 3,
          "coverImageMediaId": 3,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 2,
          "title": "Delivering Bad News to Your Team",
        },
      ],
      "slug": "management",
      "starCounts": {
        "bronze": 0,
        "gold": 0,
        "silver": 1,
      },
      "total": 1,
    },
    {
      "label": "Sales",
      "scenarios": [
        {
          "attemptCount": 1,
          "bestScore": 93,
          "contentId": 4,
          "coverImageMediaId": 4,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 3,
          "title": "Cold Call Sales Pitch",
        },
        {
          "attemptCount": 1,
          "bestScore": 78,
          "contentId": 8,
          "coverImageMediaId": 8,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 2,
          "title": "Upselling Premium Features",
        },
      ],
      "slug": "sales",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 1,
      },
      "total": 2,
    },
    {
      "label": "Healthcare",
      "scenarios": [
        {
          "attemptCount": 1,
          "bestScore": 93,
          "contentId": 5,
          "coverImageMediaId": 5,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 3,
          "title": "Breaking Difficult Medical News",
        },
      ],
      "slug": "healthcare",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 0,
      },
      "total": 1,
    },
    {
      "label": "HR",
      "scenarios": [
        {
          "attemptCount": 2,
          "bestScore": 93,
          "contentId": 11,
          "coverImageMediaId": 11,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 3,
          "title": "New Hire Check-in",
        },
        {
          "attemptCount": 1,
          "bestScore": 78,
          "contentId": 6,
          "coverImageMediaId": 6,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 2,
          "title": "Conducting a Performance Review",
        },
        {
          "attemptCount": 1,
          "bestScore": 78,
          "contentId": 7,
          "coverImageMediaId": 7,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 2,
          "title": "Mediating a Workplace Conflict",
        },
      ],
      "slug": "hr",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 2,
      },
      "total": 3,
    },
    {
      "label": "Recruitment",
      "scenarios": [
        {
          "attemptCount": 1,
          "bestScore": 93,
          "contentId": 9,
          "coverImageMediaId": 9,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 3,
          "title": "Interviewing a Skeptical Candidate",
        },
      ],
      "slug": "recruitment",
      "starCounts": {
        "bronze": 0,
        "gold": 1,
        "silver": 0,
      },
      "total": 1,
    },
    {
      "label": "Customer Success",
      "scenarios": [
        {
          "attemptCount": 2,
          "bestScore": 93,
          "contentId": 12,
          "coverImageMediaId": 12,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 3,
          "title": "Renewing an At-Risk Enterprise Contract",
        },
        {
          "attemptCount": 1,
          "bestScore": 58,
          "contentId": 10,
          "coverImageMediaId": 10,
          "lastAttemptAt": "<timestamp>",
          "starLevel": 1,
          "title": "Explaining a Product Delay",
        },
      ],
      "slug": "customer-success",
      "starCounts": {
        "bronze": 1,
        "gold": 1,
        "silver": 0,
      },
      "total": 2,
    },
  ],
  "name": "Sarah",
  "passRate": 0.9166666666666666,
  "teamName": null,
  "totalPoints": 435,
  "userId": 2,
}
`;

exports[`Gamification golden output > GET /api/teams/all/star-map (manager view) 1`] = `
{
  "categories": [
    {
      "label": "Customer Service",
      "slug": "customer-service",
    },
    {
      "label": "Leadership",
      "slug": "leadership",
    },
    {
      "label": "Management",
      "slug": "management",
    },
    {
      "label": "Sales",
      "slug": "sales",
    },
    {
      "label": "Healthcare",
      "slug": "healthcare",
    },
    {
      "label": "HR",
      "slug": "hr",
    },
    {
      "label": "Recruitment",
      "slug": "recruitment",
    },
    {
      "label": "Customer Success",
      "slug": "customer-success",
    },
  ],
  "members": [
    {
      "avatarInitials": "AD",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 0,
          "label": "HR",
          "silver": 0,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 0,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 0,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": null,
      "monthPoints": 0,
      "name": "Admin",
      "passRate": 0,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 0,
        "gold": 0,
        "silver": 0,
      },
      "totalPoints": 0,
      "userId": 1,
    },
    {
      "avatarInitials": "AV",
      "categoryMastery": [
        {
          "bronze": 1,
          "gold": 0,
          "label": "HR",
          "silver": 1,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Leadership",
          "silver": 0,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
      ],
      "currentWeekActive": true,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Ava",
      "passRate": 0.16666666666666666,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 7,
        "gold": 0,
        "silver": 2,
      },
      "totalPoints": 120,
      "userId": 12,
    },
    {
      "avatarInitials": "DA",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "Sales",
          "silver": 1,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "HR",
          "silver": 0,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Leadership",
          "silver": 0,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 1,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Recruitment",
          "silver": 1,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Management",
          "silver": 0,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Daniel",
      "passRate": 0.5,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 2,
        "gold": 3,
        "silver": 3,
      },
      "totalPoints": 245,
      "userId": 9,
    },
    {
      "avatarInitials": "DA",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "HR",
          "silver": 1,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Success",
          "silver": 1,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 1,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "David",
      "passRate": 0.5,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 2,
        "gold": 1,
        "silver": 5,
      },
      "totalPoints": 195,
      "userId": 5,
    },
    {
      "avatarInitials": "EM",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "HR",
          "silver": 1,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Sales",
          "silver": 1,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Service",
          "silver": 1,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 1,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Recruitment",
          "silver": 1,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Management",
          "silver": 0,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 0,
          "slug": "leadership",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Emma",
      "passRate": 0.5,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 2,
        "gold": 1,
        "silver": 5,
      },
      "totalPoints": 195,
      "userId": 6,
    },
    {
      "avatarInitials": "JA",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 2,
          "label": "HR",
          "silver": 1,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 1,
          "gold": 1,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "James",
      "passRate": 0.8333333333333334,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 1,
        "gold": 7,
        "silver": 3,
      },
      "totalPoints": 435,
      "userId": 3,
    },
    {
      "avatarInitials": "LI",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 1,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Recruitment",
          "silver": 1,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "HR",
          "silver": 0,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Leadership",
          "silver": 0,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 0,
          "slug": "management",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Liam",
      "passRate": 0.16666666666666666,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 5,
        "gold": 0,
        "silver": 2,
      },
      "totalPoints": 100,
      "userId": 11,
    },
    {
      "avatarInitials": "MA",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "HR",
          "silver": 2,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Customer Success",
          "silver": 1,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Sales",
          "silver": 1,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Maria",
      "passRate": 1,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 0,
        "gold": 6,
        "silver": 6,
      },
      "totalPoints": 450,
      "userId": 4,
    },
    {
      "avatarInitials": "MI",
      "categoryMastery": [
        {
          "bronze": 1,
          "gold": 1,
          "label": "HR",
          "silver": 1,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Michael",
      "passRate": 0.5833333333333334,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 3,
        "gold": 4,
        "silver": 3,
      },
      "totalPoints": 305,
      "userId": 7,
    },
    {
      "avatarInitials": "NO",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "Sales",
          "silver": 1,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 2,
          "gold": 0,
          "label": "HR",
          "silver": 0,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Management",
          "silver": 0,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Noah",
      "passRate": 0.25,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 7,
        "gold": 1,
        "silver": 2,
      },
      "totalPoints": 170,
      "userId": 13,
    },
    {
      "avatarInitials": "OL",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "HR",
          "silver": 0,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Success",
          "silver": 1,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Sales",
          "silver": 1,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 1,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
      ],
      "currentWeekActive": true,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Olivia",
      "passRate": 0.5,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 2,
        "gold": 1,
        "silver": 5,
      },
      "totalPoints": 195,
      "userId": 8,
    },
    {
      "avatarInitials": "SA",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 1,
          "label": "HR",
          "silver": 2,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Sales",
          "silver": 1,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 1,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Customer Service",
          "silver": 0,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Healthcare",
          "silver": 0,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 1,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Leadership",
          "silver": 1,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
      ],
      "currentWeekActive": true,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Sarah",
      "passRate": 0.9166666666666666,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 1,
        "gold": 6,
        "silver": 5,
      },
      "totalPoints": 435,
      "userId": 2,
    },
    {
      "avatarInitials": "SO",
      "categoryMastery": [
        {
          "bronze": 0,
          "gold": 0,
          "label": "HR",
          "silver": 3,
          "slug": "hr",
          "total": 3,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Customer Service",
          "silver": 1,
          "slug": "customer-service",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Healthcare",
          "silver": 1,
          "slug": "healthcare",
          "total": 1,
        },
        {
          "bronze": 0,
          "gold": 0,
          "label": "Management",
          "silver": 1,
          "slug": "management",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Customer Success",
          "silver": 0,
          "slug": "customer-success",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Sales",
          "silver": 0,
          "slug": "sales",
          "total": 2,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Leadership",
          "silver": 0,
          "slug": "leadership",
          "total": 1,
        },
        {
          "bronze": 1,
          "gold": 0,
          "label": "Recruitment",
          "silver": 0,
          "slug": "recruitment",
          "total": 1,
        },
      ],
      "currentWeekActive": false,
      "lastActiveAt": "<timestamp>",
      "monthPoints": 0,
      "name": "Sophia",
      "passRate": 0.5,
      "publishedCount": 12,
      "starCounts": {
        "bronze": 4,
        "gold": 0,
        "silver": 6,
      },
      "totalPoints": 190,
      "userId": 10,
    },
  ],
  "team": {
    "id": "all",
    "managerName": null,
    "name": "All teams",
  },
  "teamSummary": {
    "activeThisWeek": 3,
    "memberCount": 13,
    "monthPoints": 0,
    "passRate": 0.4935897435897436,
    "starCounts": {
      "bronze": 36,
      "gold": 30,
      "silver": 47,
    },
    "totalPoints": 3035,
  },
}
`;
